[project]
name = "advent-of-code-2023"
version = "0.1.0"
description = "solve advent of code for year 2023"
authors = [
    {name = "cdubos", email = "contact@cdubos.fr"},
]
dependencies = [
    "httpx>=0.25,<0.26",
    "typer>=0.9.0",
    "python-decouple>=3.8",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"


[project.scripts]
advent-of-code = "advent_of_code:app"
